docs/book/samples/appa/bare_after_fused_check.out
error[formatting]: a fused `>> step` is a single sequential step — a line cannot silently join it. for a group, put the wall alone and list the members below it
  --> bare_after_fused_check.kso:4:3
   4 |   print "d"
         ^
