docs/book/samples/appa/bare_after_fused_check.kso
main =
  print "x"
  >> print "c"
  print "d"
